# code_templates

./: .gitignore  README.md
.github/workflows/: main.yml
ansible/: README.md  demo_print_netrc.yaml
bash/: template.sh
cpp/: BUILD  WORKSPACE
cpp/include/: logic.h
cpp/src/: logic.cpp
cpp/test/: unit_logic.cpp
docker_swarm/: README.md  docker-compose.yml
docker_swarm/bazel_remote_cache/: README.md  docker-compose.yml
docker_swarm/vote_mongodb/: Dockerfile  app.py  docker-compose.yml
go/: README.md
openfaas/: generate_faas.sh  generate_faas_python3.sh
python/: BUILD  WORKSPACE
python/test/: unit.py
rust/: Cargo.toml  README.md  WORKSPACE
rust/cargo/: crates.bzl
rust/cargo/remote/: BUILD.atty-0.2.14.bazel  BUILD.hermit-abi-0.1.18.bazel  BUILD.libc-0.2.88.bazel  BUILD.winapi-0.3.9.bazel
rust/hello_world/: BUILD.bazel  Cargo.toml
rust/hello_world/src/: lib.rs
